--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -1,1 +1,8 @@
 <p>This is the partial for view 1.</p>
+<ul ng-repeat="person in people">
+  <li>{{person}}</li>
+</ul>
+<form action="">
+  <input type="text" ng-model="newPerson"/>
+  <button type="submit" ng-click="addPerson()">Add New Person</button>
+</form>
